--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "homepage": "https://github.com/MilicaJovanovic/AirTraffic#readme",
   "devDependencies": {
     "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.3.1"
   }
 }
