--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "fetch-jsonp": "^1.1.3",
     "jquery": "^3.3.1",
     "mustache": "^2.3.0"
   }
